Add Projects Page

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 <body>
      <nav class="navbar">
           <ul>
-            <li class="selectedItem"><a href="#">Home</a></li>
-            <li><a href="#">Projects</a></li>
+            <li class="selectedItem"><a href="index.htm">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
             <li><a href="#">About me</a></li>
-            <li><a href="#">Contato</a></li>
           </ul>
     </nav>
 
