--- a/index.html
+++ b/index.html
@@ -1,52 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <link rel="stylesheet" href="css/style.css">  
+    </head>
 
-<head>
-    <link rel="stylesheet" href="css/style.css">  
-</head>
+    <body>
+        <main>
 
-<body>
-     <nav class="navbar">
-          <ul>
-            <li class="selectedItem"><a href="index.htm">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="#">About me</a></li>
-          </ul>
-    </nav>
-
-    <section class="section1">    
-
-        <div>            
-            <br>
-            <br>
-            <h1 class="titulo"><span class="destaque">Hello, </span>I'm Nathan.</h1>
-            <h3 class="titulo">Welcome to my portfolio</h3>
-        </div>
-    </section>
-
-    <section class="section2">
-        <div class="icon">
-            <a target="blank" href="https://www.linkedin.com/in/nathan-c-santana/"><img src="img/linkedin.png"></a>
-        <div>
-        <div class="icon">
-            <a target="blank" href="https://github.com/nathansantana"><img src="img/github2.png"></a>
-        <div>
-        <div class="icon">
-            <a target="blank" href="https://store.steampowered.com/publisher/ShortStackStudio"><img src="img/steam.png"></a>
-        <div>               
-        
-    </section>
+            <navbar class="navbar">
+                <ul>
+                    <li><a href="#" class="selectedItem">Home</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">About me</a></li>
+                </ul>
+            </navbar>
 
 
-    <footer class="footerDiv">
-        <div>
-            <a>NS</a>           
-            <a>2023</a>
-        </div>
-    </footer>
+            <div class="section">
+                <h1 class="titulo"><span class="destaque">Hello, </span>I'm Nathan.</h1>
+                <h3 class="titulo">Welcome to my portfolio</h3>
+            </div>
 
-</body>
+            <div class="section2">
+                <a target="blank" href="https://www.linkedin.com/in/nathan-c-santana/"><img class="socialMedia" src="img/linkedin.png" /></a>
+                <a target="blank" href="https://github.com/nathansantana"><img class="socialMedia" src="img/github2.png" /></a>
+                <a target="blank" href="https://store.steampowered.com/publisher/ShortStackStudio"><img class="socialMedia" src="img/steam.png" /></a>                
+            </div>
 
+            <footer>
+                <p>© 2023</p>
+            </footer>
+        </main>
 
-
+    </body>
 </html>
