--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     </head>
 
     <body>
+
+        <navbar class="navbar">
+            <ul>
+                <li><a href="index.html" class="selectedItem">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="aboutme.html">About me</a></li>
+            </ul>
+        </navbar>
+
         <main>
-
-            <navbar class="navbar">
-                <ul>
-                    <li><a href="#" class="selectedItem">Home</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">About me</a></li>
-                </ul>
-            </navbar>
-
-
             <div class="section">
                 <h1 class="titulo"><span class="destaque">Hello, </span>I'm Nathan.</h1>
                 <h3 class="titulo">Welcome to my portfolio</h3>
@@ -24,13 +23,13 @@
             <div class="section2">
                 <a target="blank" href="https://www.linkedin.com/in/nathan-c-santana/"><img class="socialMedia" src="img/linkedin.png" /></a>
                 <a target="blank" href="https://github.com/nathansantana"><img class="socialMedia" src="img/github2.png" /></a>
-                <a target="blank" href="https://store.steampowered.com/publisher/ShortStackStudio"><img class="socialMedia" src="img/steam.png" /></a>                
+                <a target="blank" href="https://store.steampowered.com/publisher/ShortStackStudio"><img class="socialMedia" src="img/steam.png" /></a>
             </div>
-
-            <footer>
-                <p>© 2023</p>
-            </footer>
         </main>
+
+        <footer>
+            <p>© 2023</p>
+        </footer>
 
     </body>
 </html>
