--- a/projects.html
+++ b/projects.html
@@ -29,9 +29,36 @@
 
                 <div class="grid-item">
                     <a target="_blank" href="https://store.steampowered.com/app/1639250/SokoMatch_Lizard_Saga/?curator_clanid=38665475">
-                        <img src="img/projectsImages/soko.png" alt="Light Up The Sky" />
+                        <img src="img/projectsImages/soko.png" alt="Sokomatch" />
                         <div class="texto-no-meio">
                             <p>A mix of match 3 and sokoban game. Align 3 or more gems of the same color in order to solve the puzzles </p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="grid-item">
+                    <a target="_blank" href="https://store.steampowered.com/app/1563010/Bunnys_Ban/">
+                        <img src="img/projectsImages/BunnysBun.png" alt="Bunnys Ban" />
+                        <div class="texto-no-meio">
+                            <p>Move the objects correctly to put them in the right place, light up all the crystals and solve all the puzzles.</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="grid-item">
+                    <a target="_blank" href="https://store.steampowered.com/app/1431190/Bunnys_Trail/">
+                        <img src="img/projectsImages/BunnysTrail.png" alt="Bunnys Trail" />
+                        <div class="texto-no-meio">
+                            <p>Observe the scene for a few seconds and memorize the position of the items. Avoid obstacles and collect all carrots.</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="grid-item">
+                    <a target="_blank" href="https://store.steampowered.com/app/1335810/Bunnys_Maze/">
+                        <img src="img/projectsImages/BunnysMaze.png" alt="Bunnys Maze" />
+                        <div class="texto-no-meio">
+                            <p>Navigate two little rabbits and move the walls to create a path. Go through the maze and collect all the hidden carrots.</p>
                         </div>
                     </a>
                 </div>
