AppsIcons Img update

--- a/aboutme.html
+++ b/aboutme.html
@@ -33,7 +33,7 @@
                 <hr color="#002D3D" size="2" width="100%">
                 <div class="content">
                     <div class="imagem">
-                        <img src="img/appsICons.png" alt="Imagem" class="imagem">
+                        <img src="img/appsIcons.png" alt="Imagem" class="imagem">
                     </div>
                     <div class="texto">
                         <h1>Experience</h1>
