Add Yfinance Project

--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,15 @@
             <div class="grid">
 
                 <div class="grid-item">
+                    <a target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiN2Q1MWEwYmEtZDA4ZC00NTkxLTg0NzgtNWQxN2I2YWY1ZjQ0IiwidCI6ImU2NmViMjQ2LTc2NmUtNGMzZi1hYmQyLTVjM2UwYmQ3NTdlNyJ9">
+                        <img src="img/projectsImages/yfinance.png" alt="yfinance" />
+                        <div class="texto-no-meio">
+                            <p>Using Python to import data from Yahoo Finance, through Yfinance API, to Power BI.</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="grid-item">
                     <a target="_blank" href="https://store.steampowered.com/app/2681640/Light_Up_The_Sky/?curator_clanid=38665475">
                         <img src="img/projectsImages/LightUpTheSky.png" alt="Light Up The Sky" />
                         <div class="texto-no-meio">
@@ -68,7 +77,7 @@
     </main>
 
     <footer>
-        <p>© 2023</p>
+        <p>2023</p>
     </footer>
 
 </body>
